<resources>
    <string name="app_name">InstaClone</string>
    <string name="search">search</string>
    <string name="home">home</string>
    <string name="add">add</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="igtv">IGTV</string>
    <string name="dm">DM</string>
    <string name="grid">Grid</string>
    <string name="linear">Linear</string>
    <string name="tag">Tag</string>
    <string name="activity">Activity</string>
    <string name="sheliza_ke">sheliza_Ke</string>
    <string name="shee_gmail_com">shee@gmail.com</string>
    <string name="contact">Contact</string>
    <string name="todo">TODO</string>
</resources>