<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/home"
    android:icon="@drawable/ic_home"
    android:enabled="true"
    android:title="@string/home" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:enabled="true"
        android:title="@string/search" />

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add"
        android:enabled="true"
        android:title="@string/add" />

    <item
        android:id="@+id/activity"
        android:icon="@drawable/ic_heart"
        android:enabled="true"
        android:title="@string/activity" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:enabled="true"
        android:title="@string/profile" />
</menu>
