<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarProfile"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.28"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="83dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarProfile"
        app:srcCompat="@drawable/ic_profile_pic"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/sheliza_ke"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePic" />

    <TextView
        android:id="@+id/tvBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="I am that chic #shee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />

    <TextView
        android:id="@+id/tvBioInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/shee_gmail_com"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBio" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="33dp"
        android:layout_height="32dp"
        android:layout_marginTop="46dp"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePic"
        app:layout_constraintTop_toBottomOf="@+id/toolbarProfile"
        app:srcCompat="@drawable/ic_plus"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/tvpostCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="30dp"
        android:text="200"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/toolbarProfile" />

    <TextView
        android:id="@+id/tvPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:text="Post"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/tvpostCount" />

    <TextView
        android:id="@+id/tvFollowersCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="100k"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/tvpostCount"
        app:layout_constraintTop_toBottomOf="@+id/toolbarProfile" />

    <TextView
        android:id="@+id/tvFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="4dp"
        android:text="Followers"
        app:layout_constraintStart_toEndOf="@+id/tvPost"
        app:layout_constraintTop_toBottomOf="@+id/tvFollowersCount" />

    <TextView
        android:id="@+id/tvFollowingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="30dp"
        android:text="50k"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/tvFollowersCount"
        app:layout_constraintTop_toBottomOf="@+id/toolbarProfile" />

    <TextView
        android:id="@+id/tvFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="4dp"
        android:text="Following"
        app:layout_constraintStart_toEndOf="@+id/tvFollowers"
        app:layout_constraintTop_toBottomOf="@+id/tvFollowingCount" />

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBioInfo" />

    <TextView
        android:id="@+id/tvEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="Edit Profile"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvPromotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:text="Promotion"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvEditProfile"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <TextView
        android:id="@+id/tvContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/contact"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvPromotion"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <View
        android:id="@+id/divider6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditProfile" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHighlights"
        android:layout_width="0dp"
        android:layout_height="106dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6"
        tools:listitem="@layout/profile_highlight_items" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarGrids"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="384dp"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/divider8"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarGrids" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="409dp"
        android:layout_height="461dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="384dp"
        tools:listitem="@layout/profile_row_list_item" />

    <View
        android:id="@+id/divider9"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvHighlights" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGrids"
        android:layout_width="409dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider8"
        tools:listitem="@layout/profile_row_list_item"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
